--- a/05/inkman/index.html
+++ b/05/inkman/index.html
@@ -36,12 +36,16 @@
       import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
       import { DecalGeometry } from 'three/addons/geometries/DecalGeometry.js';
 
+      import { AnaglyphEffect} from 'three/addons/effects/AnaglyphEffect.js'
+
       const container = document.getElementById( 'container' );
 
       let renderer, scene, camera, stats;
       let mesh;
       let raycaster;
       let line;
+
+      let effect;
 
       const intersection = {
         intersects: false,
@@ -96,6 +100,9 @@
         renderer.setPixelRatio( window.devicePixelRatio );
         renderer.setSize( window.innerWidth, window.innerHeight );
         container.appendChild( renderer.domElement );
+
+        effect = new AnaglyphEffect(renderer);
+        effect.setSize(window.innerWidth, window.innerHeight);
 
         stats = new Stats();
         container.appendChild( stats.dom );
@@ -297,7 +304,9 @@
 
         requestAnimationFrame( animate );
 
-        renderer.render( scene, camera );
+        //renderer.render( scene, camera );
+
+        effect.render(scene, camera);
 
         stats.update();
 
