--- a/final_project/index.html
+++ b/final_project/index.html
@@ -360,7 +360,7 @@
         var controller = renderer.xr.getController( 0 );
         scene.add(controller);
 
-        controller.addEventListener( 'selectend ', function( e ) {
+        controller.addEventListener( 'selectstart ', function( ) {
 
           tempMatrix.identity().extractRotation( controller.matrixWorld );
 
@@ -465,7 +465,7 @@
           };
         };
 
-        requestAnimationFrame(animate);
+        renderer.setAnimationLoop(animate);
 
         // ... update renderer + controls
         controls.update();
