minor bug fix from the last one

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -379,7 +379,7 @@
 
         var controllerModelFactory = new XRControllerModelFactory();
 
-				controllerGrip = renderer.xr.getControllerGrip( 0 );
+				var controllerGrip = renderer.xr.getControllerGrip( 0 );
 				controllerGrip.add( controllerModelFactory.createControllerModel( controllerGrip ) );
 				scene.add( controllerGrip );
 
