--- a/final_project/index.html
+++ b/final_project/index.html
@@ -239,6 +239,8 @@
         // Setup interaction
         controls = new OrbitControls(camera, renderer.domElement);
 
+        var raycaster = new THREE.Raycaster();
+
         clock = new THREE.Clock();
 
         window.addEventListener( 'resize', onWindowResize );
@@ -253,7 +255,6 @@
 
             var vp_coords_near = new THREE.Vector3( vp_coords.x, vp_coords.y, 0);
 
-            var raycaster = new THREE.Raycaster();
             raycaster.setFromCamera(vp_coords_near, camera);
 
             var intersects = raycaster.intersectObjects(scene.children);
@@ -278,7 +279,6 @@
 
             var vp_coords_near = new THREE.Vector3( vp_coords.x, vp_coords.y, 0);
 
-            var raycaster = new THREE.Raycaster();
             raycaster.setFromCamera(vp_coords_near, camera);
 
             var intersects = raycaster.intersectObjects(scene.children);
@@ -384,13 +384,9 @@
 				scene.add( controllerGrip );
 
         controller.addEventListener( 'selectstart ', function( ) {
-
-          tempMatrix.identity().extractRotation( controller.matrixWorld );
-
           var raycaster;
 
-          raycaster.ray.origin.setFromMatrixPosition( controller.matrixWorld );
-          raycaster.ray.direction.set( 0, 0, -1 ).applyMatrix4( tempMatrix ); 
+          raycaster.setFromXRController( controller );
 
           var intersects = raycaster.intersectObjects(scene.children);
 
@@ -431,7 +427,7 @@
 					case 'tracked-pointer':
 
 						geometry = new THREE.BufferGeometry();
-						geometry.setAttribute( 'position', new THREE.Float32BufferAttribute( [ 0, 0, 0, 0, 0, - 10 ], 3 ) );
+						geometry.setAttribute( 'position', new THREE.Float32BufferAttribute( [ 0, 0, 0, 0, 0, - 500 ], 3 ) );
 						geometry.setAttribute( 'color', new THREE.Float32BufferAttribute( [ 0.5, 0.5, 0.5, 0, 0, 0 ], 3 ) );
 
 						material = new THREE.LineBasicMaterial( { vertexColors: true, blending: THREE.AdditiveBlending } );
