--- a/final_project/index.html
+++ b/final_project/index.html
@@ -440,13 +440,21 @@
         const delta = clock.getDelta();
 
         if (isSelecting) {
-          raycaster.setFromXRController( controller );
+          // raycaster.setFromXRController( controller );
 
-          var intersects = raycaster.intersectObjects(scene.children);
+          // var intersects = raycaster.intersectObjects(scene.children);
 
-          if ( intersects.length > 0 && intersects[0].object != ground && intersects[0].object != sky) {
-            intersects[0].object.visible = false;
-          };
+          // if ( intersects.length > 0 && intersects[0].object != ground && intersects[0].object != sky) {
+          //   intersects[0].object.visible = false;
+          // };
+
+          var geometry = new THREE.BoxGeometry( 2, 2, 2 );
+          var material = new THREE.MeshStandardMaterial({ color: 0xffffff });
+          cube = new THREE.Mesh( geometry, material );
+
+          cube.position.set(0, 0, 10);
+        
+          scene.add(cube);
           
         }
 
